Ajuste texto de Sobre mi

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>¡Hola! Soy Luis Carlos, un apasionado desarrollador fullstack con experiencia en la creación de
             soluciones digitales innovadoras y eficientes. Me especializo en diseñar y desarrollar 
             software corporativo y aplicaciones web e incluso software de escritorio, escalables y centradas en el usuario, utilizando tecnologías tanto 
-            en el frontend como en el backend. Mi enfoque se basa en escribir mantenible, 
+            en el frontend como en el backend. Mi enfoque se basa en escribir código mantenible, 
             siempre buscando las mejores prácticas y estándares de la industria. Disfruto 
             enfrentarme a nuevos desafíos y aprender constantemente para mantenerme actualizado 
             en un campo tan dinámico como el desarrollo de software.
