Ajuste fecha en experiencia laboral

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>Proyectos</h2>
         <div class="proyecto">
             <h2>Empresa Thomas Greg and Sons</h2>
-            <h4>2024 - Actualidad</h4>
+            <h4>Septiembre 2024 - Actualidad</h4>
             <h3>Proyecto Equinox</h3>
             <p>Software electoral para elección de jurados de mesa para elecciones 2025 y futuras.</p>
             <h4>Cargo </h4>
