Add Google Analytics para medir tráfico

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
     <title>Luis Carlos Espitia Amín</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9M4SNJP4SX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9M4SNJP4SX');
+    </script>
 </head>
+
 <body>
     <header>
         <nav>
@@ -27,11 +38,12 @@
     <section id="sobre-mi">
         <h2>Sobre Mí</h2>
         <p>¡Hola! Soy Luis Carlos, un apasionado desarrollador fullstack con experiencia en la creación de
-            soluciones digitales innovadoras y eficientes. Me especializo en diseñar y desarrollar 
-            software corporativo y aplicaciones web e incluso software de escritorio, escalables y centradas en el usuario, utilizando tecnologías tanto 
-            en el frontend como en el backend. Mi enfoque se basa en escribir código mantenible, 
-            siempre buscando las mejores prácticas y estándares de la industria. Disfruto 
-            enfrentarme a nuevos desafíos y aprender constantemente para mantenerme actualizado 
+            soluciones digitales innovadoras y eficientes. Me especializo en diseñar y desarrollar
+            software corporativo y aplicaciones web e incluso software de escritorio, escalables y centradas en el
+            usuario, utilizando tecnologías tanto
+            en el frontend como en el backend. Mi enfoque se basa en escribir código mantenible,
+            siempre buscando las mejores prácticas y estándares de la industria. Disfruto
+            enfrentarme a nuevos desafíos y aprender constantemente para mantenerme actualizado
             en un campo tan dinámico como el desarrollo de software.
         </p>
     </section>
@@ -62,7 +74,7 @@
             <h3>Proyecto Web Exterior</h3>
             <p>Software electoral para la inscripción de votantes en el exterior.</p>
             <h4>Cargo </h4>
-            <p>Ingeniero de Desarrollo II encargado de dar soporte y agregar nuevas funcionalidades a 
+            <p>Ingeniero de Desarrollo II encargado de dar soporte y agregar nuevas funcionalidades a
                 aplicativo para la inscripción de votantes en el exterior.
             </p>
             <h5>Herramientas</h5>
@@ -83,7 +95,7 @@
             <h3>Facturizate - México (Carvajal)</h3>
             <p>Software para facturación electrónica.</p>
             <h4>Cargo </h4>
-            <p>Analista de Desarrollo encargado de dar soporte y crear nuevas funcionalidades en aplicativo 
+            <p>Analista de Desarrollo encargado de dar soporte y crear nuevas funcionalidades en aplicativo
                 Facturizate FEMX (Factura electrónica México).
             </p>
             <h5>Herramientas</h5>
@@ -101,7 +113,7 @@
             <h3>Proyecto Gaia (Carvajal)</h3>
             <p>Software para delivery</p>
             <h4>Cargo </h4>
-            <p>Analista de desarrollo Java encargado de mantener y crear nuevas funcionalidades en proyecto 
+            <p>Analista de desarrollo Java encargado de mantener y crear nuevas funcionalidades en proyecto
                 Gaia de cliente Carvajal.
             </p>
             <h5>Herramientas</h5>
@@ -113,7 +125,7 @@
                 <li>Azure</li>
                 <li>Git</li>
             </ul>
-            
+
         </div>
     </section>
 
@@ -122,10 +134,10 @@
             <h2>Empresa Codesa</h2>
             <h4>Junio 2022 - Septiembre 2023</h4>
             <h3>Boletería (W arena)</h3>
-            <p>Software para gestión de ingreso a estadios de América de Cali, Deportivo y Once 
+            <p>Software para gestión de ingreso a estadios de América de Cali, Deportivo y Once
                 Caldas.</p>
             <h4>Cargo </h4>
-            <p>Desarrollador encargado de crear y mantener funcionalidades de software de boletería y desarrollo 
+            <p>Desarrollador encargado de crear y mantener funcionalidades de software de boletería y desarrollo
                 de nuevo portal público W arena.
             </p>
             <h5>Herramientas</h5>
@@ -141,7 +153,7 @@
             <h3>Proyecto Lotería Curazao</h3>
             <p>Panel dashboard para administrar lotería Curazao.</p>
             <h4>Cargo</h4>
-            <p>Desarrollador encargado de desarrollar panel dashboard para administrar proceso 
+            <p>Desarrollador encargado de desarrollar panel dashboard para administrar proceso
                 de lotería Curazao.
             </p>
             <h5>Herramientas</h5>
@@ -153,11 +165,12 @@
             </ul>
 
             <h3>Proyecto Capturador de datos</h3>
-            <p>Landing page para capturar y actualizar datos de clientes de Grupo Empresarial 
-                (Super Giros, Gane, Con Suerte, Multired, Inverapuestas, Record, Redcolsa, Super Servicios del Oriente 
+            <p>Landing page para capturar y actualizar datos de clientes de Grupo Empresarial
+                (Super Giros, Gane, Con Suerte, Multired, Inverapuestas, Record, Redcolsa, Super Servicios del Oriente
                 Super Servicios del Centro del Valle, Facilisimo, etc).</p>
             <h4>Cargo</h4>
-            <p>Desarrollador encargado de desarrollar Landing Page para el registro y actualización de datos de clientes de Grupo 
+            <p>Desarrollador encargado de desarrollar Landing Page para el registro y actualización de datos de clientes
+                de Grupo
                 Empresarial.
             </p>
             <h5>Herramientas</h5>
@@ -180,7 +193,7 @@
             <h3>Software Piscicola</h3>
             <p>Software para la sistematización del cultivo de peces.</p>
             <h4>Cargo </h4>
-            <p>Desarrollador encargado del desarrollo de software para la sistematización del ciclo de vida 
+            <p>Desarrollador encargado del desarrollo de software para la sistematización del ciclo de vida
                 de peces y egresos e ingresos de la práctica.
             </p>
             <h5>Herramientas</h5>
@@ -203,17 +216,17 @@
             </div>
             <div class="item">
                 <h3>Celular</h3>
-            <p>+57 3023582274</p>
+                <p>+57 3023582274</p>
             </div>
             <div class="item">
                 <h3>Linkedin</h3>
-             <a href="https://www.linkedin.com/in/luis-carlos-espitia-am%C3%ADn-579308217/">
-                Mi perfil en Linkedin
-             </a>
+                <a href="https://www.linkedin.com/in/luis-carlos-espitia-am%C3%ADn-579308217/">
+                    Mi perfil en Linkedin
+                </a>
             </div>
             <div class="item">
                 <h3>Github</h3>
-           <a href="https://github.com/aminLuis">Mi perfil en Github</a>
+                <a href="https://github.com/aminLuis">Mi perfil en Github</a>
             </div>
         </div>
     </section>
@@ -224,4 +237,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
